get by id kost
